example/lib/src/arbs/errors/app_ms.arb
{
  "@@locale": "ms",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Ralat berlaku",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ralat yang tidak dijangka berlaku",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Laporan bug telah dihantar dengan jayanya.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}